--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
   </nav>
   <div class="container">
-    <div class="row row-cols-1 row-cols-md-3 g-5">
+    <div id="cards" class="row row-cols-1 row-cols-md-3 g-5">
       <div class="col">
         <div class="card h-100">
           <div id="carouselExampleIndicators" class="carousel carousel-dark slide">
@@ -349,6 +349,7 @@
     </div>
   </div>
   <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/products_card.js" defer></script>
 </body>
 
 </html>
