--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <span class="material-symbols-outlined icon_navbar" id="account">
                 account_circle
               </span>
-              Facundo Hernández
+              <span class="nombreUsuario">Facundo Hernández</span>  
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Mis compras</a></li>
