--- a/presupuesto.html
+++ b/presupuesto.html
@@ -12,6 +12,7 @@
     <link href="css/style.css" rel="stylesheet">
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/products_card.js" defer></script>
+    <script src="js/presupuesto.js" defer></script>
 </head>
 
 <body>
@@ -25,7 +26,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto align_icons">
                     <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+                        <input class="form-control form-control-navbar mr-sm-2" type="search" placeholder="Buscar"
+                            aria-label="Search">
                         <a href="#" class="nav-search">
                             <span class="material-symbols-outlined">
                                 search
@@ -40,7 +42,7 @@
                             <span class="material-symbols-outlined icon_navbar" id="account">
                                 account_circle
                             </span>
-                            Facundo Hernández
+                            <span class="nombreUsuario">Facundo Hernández</span>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Mis compras</a></li>
@@ -91,29 +93,30 @@
         <div class="row">
             <div class="col col-lg-3 d-lg-block d-none">
                 <h2 class="subtitulo text-center mb-3">Opciones</h2>
-                <div class="list-group">
-                    <button type="button" class="list-group-item list-group-item-action">
+                <div class="list-group" id="list-group">
+                    <button type="button" class="list-group-item list-group-item-action" id="btnTarjetas">
                         Tarjetas
                     </button>
-                    <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
+                    <button type="button" class="list-group-item list-group-item-action active" id="btnBoletas"
+                        aria-current="true">
                         Boletas
                     </button>
-                    <button type="button" class="list-group-item list-group-item-action">
+                    <button type="button" class="list-group-item list-group-item-action" id="btnVolantes">
                         Volantes
                     </button>
-                    <button type="button" class="list-group-item list-group-item-action">
+                    <button type="button" class="list-group-item list-group-item-action" id="btnAdhesivos">
                         Adhesivos
                     </button>
-                    <button type="button" class="list-group-item list-group-item-action">
+                    <button type="button" class="list-group-item list-group-item-action" id="btnImpresiones">
                         Impresiones
                     </button>
-                    <button type="button" class="list-group-item list-group-item-action">
+                    <button type="button" class="list-group-item list-group-item-action" id="btnOtros">
                         Otros
                     </button>
                 </div>
             </div>
             <div class="col col-12 col-lg-9 d-block formulario-presupuesto">
-                <h2 class="titulo text-center mb-3">Presupuesto por boletas</h2>
+                <h2 class="titulo text-center mb-3">Presupuesto por <span id="tipoDeTrabajo">Boletas</span></h2>
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control w-100" required placeholder="Nombre">
                     <label for="floatingInput">Nombre *</label>
@@ -130,23 +133,191 @@
                     <input type="email" class="form-control w-100" required placeholder="email">
                     <label for="floatingInput">Email *</label>
                 </div>
-                <hr class="hrForm mb-3">
-                <p>Especifique cantidad de libretas, cada libreta contiene 50 números.</p>
-                <div class="form-floating mb-3">
-                    <input type="number" class="form-control w-100" required placeholder="cantidad">
-                    <label for="floatingInput">Cantidad *</label>
+
+                <!-- FORMULARIO DE BOLETAS -->
+
+                <div id="btnBoletasdiv">
+                    <hr class="hrForm mb-3">
+                    <p>Especifique cantidad de libretas, cada libreta contiene 50 números.</p>
+                    <div class="form-floating mb-3">
+                        <input type="number" class="form-control w-100" required placeholder="cantidad">
+                        <label for="floatingInput">Cantidad *</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <select class="form-select" id="floatingSelect">
+                            <option value="chicas" selected>Chicas: 11cm x 17cm (Más usadas)</option>
+                            <option value="grandes">Grandes: 17cm x 22cm</option>
+                            <option value="otro">Otro</option>
+                        </select>
+                        <label for="floatingSelect">Seleccione un tamaño</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea class="form-control w-100" placeholder="Leave a comment here"
+                            style="height: 100px"></textarea>
+                        <label for="floatingTextarea2">Datos a incorporar</label>
+                    </div>
+                    <div class="mb-3">
+                        <p>Inserte aqui los archivos que desee adjuntar.</p>
+                        <div class="d-flex">
+                            <input class="form-control" type="file" id="formFileMultiple" multiple style="width: 80%;">
+                            <button class="btn btn-primary" type="submit" style="width: 20%">Enviar</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-floating mb-3">
-                    <select class="form-select" id="floatingSelect">
-                        <option value="chicas" selected>Chicas: 11cm x 17cm (Más usadas)</option>
-                        <option value="grandes">Grandes: 17cm x 22cm</option>
-                        <option value="otro">Otro</option>
-                    </select>
-                    <label for="floatingSelect">Seleccione un tamaño</label>
+
+                <!-- FORMULARIO DE TARJETAS -->
+
+                <div id="btnTarjetasdiv" class="d-none">
+                    <hr class="hrForm mb-3">
+                    <p>Especifique cantidad de tarjetas.</p>
+                    <div class="form-floating mb-3">
+                        <input type="number" class="form-control w-100" required placeholder="cantidad">
+                        <label for="floatingInput">Cantidad *</label>
+                    </div>
+                    <p>Las tarjetas personales tienen un tamaño por defecto de aproximadamente 9,0cm x 5,5cm.</p>
+                    <div class="d-flex subtitulo mb-3">
+                        <div class="form-check px-4">
+                            <input class="form-check-input" type="radio" name="flexRadioColor" id="flexRadioDefault1"
+                                checked>
+                            <label class="form-check-label" for="flexRadioDefault1">
+                                Color
+                            </label>
+                        </div>
+                        <div class="form-check px-4">
+                            <input class="form-check-input" type="radio" name="flexRadioColor" id="flexRadioDefault2">
+                            <label class="form-check-label" for="flexRadioDefault2">
+                                Blanco y Negro
+                            </label>
+                        </div>
+                        <div class="form-check px-4">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"
+                                autocomplete="off">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                Frente y Dorso
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea class="form-control w-100" placeholder="Leave a comment here"
+                            style="height: 100px"></textarea>
+                        <label for="floatingTextarea2">Datos a incorporar</label>
+                    </div>
+                    <div class="mb-3">
+                        <p>Inserte aqui los archivos que desee adjuntar.</p>
+                        <input class="form-control" type="file" id="formFileMultiple" multiple>
+                    </div>
                 </div>
-                <div class="form-floating">
-                    <textarea class="form-control w-100" placeholder="Leave a comment here" style="height: 100px"></textarea>
-                    <label for="floatingTextarea2">Datos a incorporar</label>
+
+                <!-- FORMULARIO DE VOLANTES -->
+
+                <div id="btnVolantesdiv" class="d-none">
+                    <hr class="hrForm mb-3">
+                    <p>Especifique cantidad de tarjetas.</p>
+                    <div class="form-floating mb-3">
+                        <input type="number" class="form-control w-100" required placeholder="cantidad">
+                        <label for="floatingInput">Cantidad *</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <select class="form-select" id="floatingSelect">
+                            <option value="chicas" selected>Chicas: 11cm x 17cm (Más usadas)</option>
+                            <option value="grandes">Grandes: 17cm x 22cm</option>
+                            <option value="otro">Otro</option>
+                        </select>
+                        <label for="floatingSelect">Seleccione un tamaño</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea class="form-control w-100" placeholder="Leave a comment here"
+                            style="height: 100px"></textarea>
+                        <label for="floatingTextarea2">Datos a incorporar</label>
+                    </div>
+                    <div class="mb-3">
+                        <p>Inserte aqui los archivos que desee adjuntar.</p>
+                        <input class="form-control" type="file" id="formFileMultiple" multiple>
+                    </div>
+                </div>
+
+                <!-- FORMULARIO DE ADHESIVOS -->
+
+                <div id="btnAdhesivosdiv" class="d-none">
+                    <hr class="hrForm mb-3">
+                    <p>Especifique cantidad de tarjetas.</p>
+                    <div class="form-floating mb-3">
+                        <input type="number" class="form-control w-100" required placeholder="cantidad">
+                        <label for="floatingInput">Cantidad *</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <select class="form-select" id="floatingSelect">
+                            <option value="chicas" selected>Chicas: 11cm x 17cm (Más usadas)</option>
+                            <option value="grandes">Grandes: 17cm x 22cm</option>
+                            <option value="otro">Otro</option>
+                        </select>
+                        <label for="floatingSelect">Seleccione un tamaño</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea class="form-control w-100" placeholder="Leave a comment here"
+                            style="height: 100px"></textarea>
+                        <label for="floatingTextarea2">Datos a incorporar</label>
+                    </div>
+                    <div class="mb-3">
+                        <p>Inserte aqui los archivos que desee adjuntar.</p>
+                        <input class="form-control" type="file" id="formFileMultiple" multiple>
+                    </div>
+                </div>
+
+                <!-- FORMULARIO DE IMPRESIONES -->
+
+                <div id="btnImpresionesdiv" class="d-none">
+                    <hr class="hrForm mb-3">
+                    <p>Especifique cantidad de tarjetas.</p>
+                    <div class="form-floating mb-3">
+                        <input type="number" class="form-control w-100" required placeholder="cantidad">
+                        <label for="floatingInput">Cantidad *</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <select class="form-select" id="floatingSelect">
+                            <option value="chicas" selected>Chicas: 11cm x 17cm (Más usadas)</option>
+                            <option value="grandes">Grandes: 17cm x 22cm</option>
+                            <option value="otro">Otro</option>
+                        </select>
+                        <label for="floatingSelect">Seleccione un tamaño</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea class="form-control w-100" placeholder="Leave a comment here"
+                            style="height: 100px"></textarea>
+                        <label for="floatingTextarea2">Datos a incorporar</label>
+                    </div>
+                    <div class="mb-3">
+                        <p>Inserte aqui los archivos que desee adjuntar.</p>
+                        <input class="form-control" type="file" id="formFileMultiple" multiple>
+                    </div>
+                </div>
+
+                <!-- FORMULARIO DE OTROS -->
+
+                <div id="btnOtrosdiv" class="d-none">
+                    <hr class="hrForm mb-3">
+                    <p>Especifique cantidad de tarjetas.</p>
+                    <div class="form-floating mb-3">
+                        <input type="number" class="form-control w-100" required placeholder="cantidad">
+                        <label for="floatingInput">Cantidad *</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <select class="form-select" id="floatingSelect">
+                            <option value="chicas" selected>Chicas: 11cm x 17cm (Más usadas)</option>
+                            <option value="grandes">Grandes: 17cm x 22cm</option>
+                            <option value="otro">Otro</option>
+                        </select>
+                        <label for="floatingSelect">Seleccione un tamaño</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea class="form-control w-100" placeholder="Leave a comment here"
+                            style="height: 100px"></textarea>
+                        <label for="floatingTextarea2">Datos a incorporar</label>
+                    </div>
+                    <div class="mb-3">
+                        <p>Inserte aqui los archivos que desee adjuntar.</p>
+                        <input class="form-control" type="file" id="formFileMultiple" multiple>
+                    </div>
                 </div>
             </div>
         </div>
