agregando base de datos de usuarios y validaciones de registro y login correspondientes

--- a/presupuesto.html
+++ b/presupuesto.html
@@ -129,7 +129,7 @@
                 <!-- FORMULARIO DE BOLETAS -->
 
                 <div id="btnBoletasdiv">
-                    <form class="need-validation" id="" action="#" novalidate>
+                    <form class="need-validation presup-form" id="" action="#" novalidate>
                         <div class="toAppendForm"></div>
                         <hr class="hrForm mb-3">
                         <p>Especifique cantidad de libretas, cada libreta contiene 50 números.</p>
@@ -166,7 +166,7 @@
                 <!-- FORMULARIO DE TARJETAS -->
 
                 <div id="btnTarjetasdiv" class="d-none">
-                    <form class="need-validation" id="" action="#" novalidate>
+                    <form class="need-validation presup-form" id="" action="#" novalidate>
                         <div class="toAppendForm"></div>
                         <hr class="hrForm mb-3">
                         <p>Especifique cantidad de tarjetas.</p>
@@ -219,7 +219,7 @@
                 <!-- FORMULARIO DE VOLANTES -->
 
                 <div id="btnVolantesdiv" class="d-none">
-                    <form class="need-validation" id="" action="#" novalidate>
+                    <form class="need-validation presup-form" id="" action="#" novalidate>
                         <div class="toAppendForm"></div>
                         <hr class="hrForm mb-3">
                         <p>Especifique cantidad de volantes.</p>
@@ -286,7 +286,7 @@
                 <!-- FORMULARIO DE ADHESIVOS -->
 
                 <div id="btnAdhesivosdiv" class="d-none">
-                    <form class="need-validation" id="" action="#" novalidate>
+                    <form class="need-validation presup-form" id="" action="#" novalidate>
                         <div class="toAppendForm"></div>
                         <hr class="hrForm mb-3">
                         <p>Especifique cantidad de adhesivos.</p>
@@ -329,7 +329,7 @@
                 <!-- FORMULARIO DE IMPRESIONES -->
 
                 <div id="btnImpresionesdiv" class="d-none">
-                    <form class="need-validation" id="" action="#" novalidate>
+                    <form class="need-validation presup-form" id="" action="#" novalidate>
                         <div class="toAppendForm"></div>
                         <hr class="hrForm mb-3">
                         <p>Especifique cantidad de impresiones.</p>
@@ -403,7 +403,7 @@
                 <!-- FORMULARIO DE OTROS -->
 
                 <div id="btnOtrosdiv" class="d-none">
-                    <form class="need-validation" id="" action="#" novalidate>
+                    <form class="need-validation presup-form" id="" action="#" novalidate>
                         <div class="toAppendForm"></div>
                         <hr class="hrForm mb-3">
                         <p>Especifique cantidad.</p>
