--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body id="bodyindex">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <img src="img/logo_nav2.png" class="navbar-img">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -84,7 +84,34 @@
         </div>
       </div>
     </div>
+  </nav> -->
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <img src="img/logo_nav2.png" class="navbar-img">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto align_icons">
+          <form class="form-inline">
+            <input class="form-control form-control-navbar mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+            <a href="#" class="nav-search">
+              <span class="material-symbols-outlined">
+                search
+              </span>
+            </a>
+          </form>
+          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link" aria-current="page" href="presupuesto.html">Presupuesto</a>
+          <a class="nav-link" aria-current="page" href="presupuesto.html">Registrarse</a>
+          <a class="nav-link" aria-current="page" href="login.html">Iniciar Sesión</a>
+        </div>
+      </div>
+    </div>
   </nav>
+
   <div class="container containerIndex">
     <div id="cards" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
       <!-- Aquí se incorporan las cards definidas en products_card.js -->
