--- a/login.html
+++ b/login.html
@@ -5,11 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Gráfica Gerli</title>
-    <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/validation_login.js" defer></script>
 </head>
 
 <body>
@@ -18,16 +20,27 @@
             <div class="ventana-form">
                 <div class="form">
                     <h1 class="form-title">Inicio de Sesión</h1>
-                    <form action="index.html" target="_blank" id="form-login">
-                        <span>Nombre de usuario</span>
-                        <input type="text" name="account" required placeholder="Ingrese usuario o e-mail">
-                        <span>Contraseña</span>
-                        <input type="password" name="password" required placeholder="Introduzca su contraseña">
+                    <form action="index.html" id="form-login" class="need-validation" novalidate>
+                        <div class="form-floating mb-5">
+                            <input type="email" name="email" class="form-control w-100" id="email" required placeholder="email">
+                            <label for="floatingInput">Email *</label>
+                            <div class="invalid-feedback">
+                                Por favor, ingrese un email correcto.
+                            </div>
+                        </div>
+                        <div class="form-floating mb-5">
+                            <input type="password" name="password" class="form-control w-100" id="password" required placeholder="password">
+                            <label for="floatingInput">Password *</label>
+                            <div class="invalid-feedback">
+                                Por favor, ingrese una contraseña correcta.
+                            </div>
+                        </div>
+                        <button class="btn btn-primary w-100 mb-4" type="submit" name="login">Ingresar</button>
                     </form>
                 </div>
             </div>
             <div class="ventana-extra">
-                <p>hola 2</p>
+                <img id="logo-login" src="./img/logo_nav2.png">
             </div>
         </div>
     </main>
