commiteando cambios sin guardar antes de cambiar de version

--- a/index.html
+++ b/index.html
@@ -111,12 +111,16 @@
       </div>
     </div>
   </nav>
-
-  <div class="container containerIndex">
+  
+  <main class="container containerIndex">
+    <header class="mt-5 mb-5 text-center" id="index-title">
+      <h2 class="">Más de <span>25 años</span> brindando</h2>
+      <h1>IMPRESIONES DE CALIDAD</h1>
+    </header>
     <div id="cards" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
       <!-- Aquí se incorporan las cards definidas en products_card.js -->
     </div>
-  </div>
+  </main>
 </body>
 
 </html>
