--- a/login.html
+++ b/login.html
@@ -21,19 +21,17 @@
                 <div class="form">
                     <h1 class="form-title">Inicio de Sesión</h1>
                     <form action="index.html" id="form-login" class="need-validation" novalidate>
-                        <div class="form-floating mb-5">
+                        <div class="form-floating mb-3">
                             <input type="email" name="email" class="form-control w-100" id="email" required placeholder="email">
                             <label for="floatingInput">Email *</label>
-                            <div class="invalid-feedback">
-                                Por favor, ingrese un email correcto.
-                            </div>
+                            <p id="divEmail">
+                            </p>
                         </div>
-                        <div class="form-floating mb-5">
+                        <div class="form-floating mb-3">
                             <input type="password" name="password" class="form-control w-100" id="password" required placeholder="password">
                             <label for="floatingInput">Password *</label>
-                            <div class="invalid-feedback">
-                                Por favor, ingrese una contraseña correcta.
-                            </div>
+                            <p id="divPassword">
+                            </p>
                         </div>
                         <button class="btn btn-primary w-100 mb-4" type="submit" name="login">Ingresar</button>
                     </form>
