llevando la pagina solamente a un landing page y presupuesto

--- a/index.html
+++ b/index.html
@@ -15,108 +15,17 @@
 </head>
 
 <body id="bodyindex">
-  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <img src="img/logo_nav2.png" class="navbar-img">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-auto align_icons">
-          <form class="form-inline">
-            <input class="form-control form-control-navbar mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-            <a href="#" class="nav-search">
-              <span class="material-symbols-outlined">
-                search
-              </span>
-            </a>
-          </form>
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-          <a class="nav-link" aria-current="page" href="presupuesto.html">Presupuesto</a>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle align_icons" href="#" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              <span class="material-symbols-outlined icon_navbar" id="account">
-                account_circle
-              </span>
-              <span class="nombreUsuario">Facundo Hernández</span>  
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Mis compras</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link align_icons" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <span class="material-symbols-outlined icon_navbar" id="notification">
-                mail
-              </span>
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link align_icons" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <span class="material-symbols-outlined icon_navbar" id="notification">
-                notifications
-              </span>
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-        </div>
-      </div>
-    </div>
-  </nav> -->
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <img src="img/logo_nav2.png" class="navbar-img">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-auto align_icons">
-          <form class="form-inline">
-            <input class="form-control form-control-navbar mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-            <a href="#" class="nav-search">
-              <span class="material-symbols-outlined">
-                search
-              </span>
-            </a>
-          </form>
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-          <a class="nav-link" aria-current="page" href="presupuesto.html">Presupuesto</a>
-          <a class="nav-link" aria-current="page" href="presupuesto.html">Registrarse</a>
-          <a class="nav-link" aria-current="page" href="login.html">Iniciar Sesión</a>
-        </div>
-      </div>
-    </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-center align-items-center">
+    <img src="img/logo_nav2.png" class="navbar-img">
+    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+    <a class="nav-link" aria-current="page" href="presupuesto.html">Presupuesto</a>
   </nav>
-
-  <div class="container containerIndex">
-    <div id="cards" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
-      <!-- Aquí se incorporan las cards definidas en products_card.js -->
-    </div>
+ <div class="row">
+  <div class="col">
+      <img class="logo25" src="./img/Logo 25 años.png" alt="">
   </div>
+  <div class="col"></div>
+</div>
 </body>
 
 </html>
